--- a/src/DaprStateManagement/State-Management-Dapr-Cli/State-Management-Dapr-Cli.csproj
+++ b/src/DaprStateManagement/State-Management-Dapr-Cli/State-Management-Dapr-Cli.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Spectre.Console" Version="0.38.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\State-Management-Models\State-Management-Models.csproj" />
+    </ItemGroup>
+
 </Project>
