--- a/src/DaprStateManagement/State-Management-Web/State-Management-Web.csproj
+++ b/src/DaprStateManagement/State-Management-Web/State-Management-Web.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\State-Management-Models\State-Management-Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    </ItemGroup>
+
 </Project>
