Adding secrets project with data and key values - keys will be rotated for services like ServiceBus, EventHub and SignalR

--- a/src/BuildingBlocks/Building-Blocks-Secret-Cli/Components/azurekeyvault.yaml
+++ b/src/BuildingBlocks/Building-Blocks-Secret-Cli/Components/azurekeyvault.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: azurekeyvaultsb  
+  name: azurekeyvaultsecrets 
 spec:
   type: secretstores.azure.keyvault
   version: v1
